--- a/HeroDesigner.Installer/Main.xaml
+++ b/HeroDesigner.Installer/Main.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
         mc:Ignorable="d"
-        Height="150"
+        Height="200"
         x:Name="w"
         >
     <Grid Margin="5">
@@ -14,24 +14,26 @@
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Text="Mids Reborn" Background="White" HorizontalAlignment="Center" FontSize="20" />
+        <TextBlock Name="Title" Text="Mids Reborn" Background="White" HorizontalAlignment="Center" FontSize="20" />
         <!--<TextBlock Text="{Binding CounterValue}" Margin="5" />
         <Button Command="{Binding Decrement}" Content="-" VerticalAlignment="Center" Margin="5" />
         <Button Command="{Binding Increment}" Content="+" Margin="5" />
         <TextBlock Text="{Binding StepSize}" Margin="5" />
         <Slider Value="{Binding StepSize}" TickFrequency="1" Minimum="1" Maximum="10" MinWidth="100" Margin="5" />-->
-        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" >
-            <Button Command="{Binding SelectFolder}" Content="Select Install Location" Margin="5" />
-            <TextBlock TextAlignment="Center" Text="{Binding SelectedFolder, TargetNullValue='None', StringFormat='Installing to {0}'}" Margin="5" />
+        <TextBlock Grid.Row="1" Margin="5" Background="White" HorizontalAlignment="Left" Text="{Binding InstallerSize, Mode=OneTime, StringFormat='Expected install size {0}'}" />
+        <StackPanel Margin="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" MinHeight="30" >
+            <Button Command="{Binding SelectFolder}" Content="Select Install Location" Margin="0,0,5,0" />
+            <TextBlock TextAlignment="Center" Text="{Binding SelectedFolder, TargetNullValue='None', StringFormat='Installing to {0}'}" Margin="0,0,5,0" />
         </StackPanel>
-        <TextBlock Grid.Row="2" Text="{Binding Error}" />
-        <StackPanel Grid.Row="3" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <Button Content="Cancel" Command="{Binding Cancel}" />
-                <Button Content="Install" Command="{Binding Install}" />
+        <TextBlock Grid.Row="3" Text="{Binding Error}" />
+        <StackPanel Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Bottom">
+            <Button Content="Cancel" Command="{Binding Cancel}" />
+            <Button Content="Install" Command="{Binding Install}" />
             <ProgressBar Value="{Binding Progress}" />
         </StackPanel>
     </Grid>
