--- a/HeroDesigner.Installer/Main.xaml
+++ b/HeroDesigner.Installer/Main.xaml
@@ -14,28 +14,59 @@
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Name="Title" Text="Mids Reborn" Background="White" HorizontalAlignment="Center" FontSize="20" />
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="WhiteSmoke"/>
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style>
+            <Style TargetType="TextBlock">
+                <Setter Property="Background" Value="WhiteSmoke" />
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Background" Value="WhiteSmoke" />
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style>
+            <Style TargetType="Border">
+                <Setter Property="CornerRadius" Value="8"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="Background" Value="WhiteSmoke" />
+            </Style>
+        </Grid.Resources>
+        <Border HorizontalAlignment="Center">
+            <TextBlock Name="Title" Text="Mids Reborn" Background="WhiteSmoke" HorizontalAlignment="Center" Opacity=".6" FontSize="20" Margin="2" />
+        </Border>
         <!--<TextBlock Text="{Binding CounterValue}" Margin="5" />
         <Button Command="{Binding Decrement}" Content="-" VerticalAlignment="Center" Margin="5" />
         <Button Command="{Binding Increment}" Content="+" Margin="5" />
         <TextBlock Text="{Binding StepSize}" Margin="5" />
         <Slider Value="{Binding StepSize}" TickFrequency="1" Minimum="1" Maximum="10" MinWidth="100" Margin="5" />-->
-        <TextBlock Grid.Row="1" Margin="5" Background="White" HorizontalAlignment="Left" Text="{Binding InstallerSize, Mode=OneTime, StringFormat='Expected install size {0}'}" />
-        <StackPanel Margin="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" MinHeight="30" >
-            <Button Command="{Binding SelectFolder}" Content="Select Install Location" Margin="0,0,5,0" />
-            <TextBlock TextAlignment="Center" Text="{Binding SelectedFolder, TargetNullValue='None', StringFormat='Installing to {0}'}" Margin="0,0,5,0" />
+        <Border HorizontalAlignment="Left" Grid.Row="2">
+            <TextBlock Margin="5" HorizontalAlignment="Left" Text="{Binding InstallerSize, Mode=OneTime, StringFormat='Expected install size {0}'}" />
+        </Border>
+        <StackPanel Margin="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" MinHeight="30" >
+            <Border>
+                <Button Command="{Binding SelectFolder}" Content="Select Install Location" Margin="0,0,5,0" />
+            </Border>
+            <Border>
+                <TextBlock TextAlignment="Center" VerticalAlignment="Center" Text="{Binding SelectedFolder, TargetNullValue='None', StringFormat='Will install to {0}'}" Margin="0,0,5,0" />
+            </Border>
         </StackPanel>
-        <TextBlock Grid.Row="3" Text="{Binding Error}" Background="White" HorizontalAlignment="Left" />
-        <StackPanel Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Bottom">
-            <Button Content="Cancel" Command="{Binding Cancel}" />
-            <Button Content="Install" Command="{Binding Install}" />
-            <Button Content="Zip" Command="{Binding ZipInstaller}" Visibility="{Binding ShowZip}" />
-            <ProgressBar Value="{Binding Progress}" />
-        </StackPanel>
+        <Border Grid.Row="3" HorizontalAlignment="Left" CornerRadius="8">
+            <TextBlock Text="{Binding Error}" HorizontalAlignment="Left" />
+        </Border>
+        <Border Grid.Row="4" HorizontalAlignment="Left" Margin="10,10,0,10">
+            <StackPanel Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Bottom">
+                <Button Content="Cancel" Command="{Binding Cancel}" />
+                <Button Content="Install" Command="{Binding Install}" />
+                <Button Content="Zip" Command="{Binding ZipInstaller}" Visibility="{Binding ShowZip}" />
+                <ProgressBar Value="{Binding Progress}" />
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
